Fix confirm modal invisible text

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -213,5 +213,9 @@ a {
 			margin: 30% auto;
 			width: 75%;
 		}
+
+		p {
+			color: black;
+		}
 	}
 }
